# research

./: .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  Dockerfile-api  Makefile  README.md  bibliography.bib  get_datasets.py  gpt-2-fine-tune.sh  initialize.py  pyproject.toml  requirements.txt  research.sty
.devcontainer/: devcontainer.json
app/: main.py
data/: __init__.py  animals.txt  colors.csv  fauna.txt  flora.txt  flowers.txt  haiku.txt  haikus.csv  haikus.txt  rgb.txt  speclist.txt  standardize.ipynb
data/datasets/: __init__.py  clean.py  haikus.py
data/models/: default-markov.jsonc  markov-character.jsonc  markov-word.jsonc
data/scripts/: standardize.ipynb
datasets/: __init__.py  get_data.py
experiments/: exploratory_data_analysis.ipynb  nietzsche.py
experiments/eda/: adjacency_graph.ipynb  adjacency_graph.md  colors.ipynb  colors.md  haiku_qualities.ipynb  haiku_qualities.md  lines.ipynb  lines.md  rare_words.ipynb  rare_words.md  sentiment.ipynb  sentiment.md  syllables.ipynb  syllables.md  topics.ipynb  topics.md  word_clouds.ipynb  word_clouds.md  word_scores.ipynb  word_scores.md  words.ipynb  zipfs_law.ipynb  zipfs_law.md
experiments/generation/: knesser-ney-ngram.ipynb  knesser-ney-ngram.md  naive_lstm.ipynb  test.py  transformers.md
experiments/similarity/: gensim-word-similarity.md  graph-similarity.ipynb  graph-similarity.md  line-clustering.md  similarity-query.md  similarity.ipynb  topic-modeling.md
notes/: .latexmkrc  Makefile  ieeetrannotate.bst  notes.tex
papers/: bibliography.bib  glossary.tex  research.sty
(+106 files in other folders)
