[tool.poetry]
name = "research"
version = "0.1.0"
description = "Graduate research on the generation of haiku with machine learning"
authors = ["Austin Gill <atgill@protonmail.com>"]
readme = "README.md"
homepage = "https://research.agill.xyz"

[tool.poetry.dependencies]
python = "^3.6"
gensim = "^3.8"
h5py = "^2.9"
matplotlib = "^3.1"
networkx = "^2.3"
nltk = "^3.4"
numpy = "^1.17"
pandas = "^0.25.1"
requests = "^2.22"
requests-html = "^0.10.0"
scikit-learn = "^0.21.3"
scipy = "^1.3"
seaborn = "^0.9.0"
sympy = "^1.4"
textblob = "^0.15.3"
wordcloud = "^1.5"
tensorflow-gpu = {version = "^2.0.0-beta", allows-prereleases = true}
[tool.poetry.dev-dependencies]
black = {version = "^19.3-beta.0", allows-prereleases = true}
isort = "^4.3"
jedi = "^0.15.1"
nose = "^1.3"
pydocstyle = "^4.0"
pylint = "^2.3"
ipykernel = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
